# blackbox-fetch

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: config.yml
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml
blackbox_fetch/: board.py  config.py  io.py  logs.py  main.py  msp.py
blackbox_fetch/ui/main_window/: cls.py  form.py  main_window.ui
