[tool.poetry]
name = "blackbox-fetch"
version = "0.1.3"
description = "Quickly download blackbox logs and erase"
authors = ["Alexander Gorokhov <sashgorokhov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyQt6 = "^6.2.0"
pyserial = "^3.5"
pywin32 = {version = "^301", platform = "windows"}

[tool.poetry.dev-dependencies]
pyinstaller = "^4.5.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
